src-03-core-crm/main/default/objects/Contact/fields/BABCP_Accred_Prov_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>BABCP_Accred_Prov_Expiry_Date__c</fullName>
    <label>BABCP Accred Provisional Expiry Date</label>
    <type>Date</type>
</CustomField>