src-03-core-crm/main/default/objects/Contact/fields/BACPAccreditationStatus__c.field-meta.xml
<CustomField>
    <fullName>BACPAccreditationStatus__c</fullName>
    <description>Displays a value depending on the BACP Accredited expiry date</description>
    <formula>IF( PRAC_BACP_Accredited_Expiry_date__c &lt; TODAY(), &apos;Expired&apos;,
IF( PRAC_BACP_Accredited_Expiry_date__c &lt; TODAY()+14, &apos;Upcoming&apos;, 
IF( ISBLANK(PRAC_BACP_Accredited_Expiry_date__c), &apos;IS BLANK&apos;, &apos;&apos;)))</formula>
    <label>BACP Accreditation Status</label>
    <type>Text</type>
</CustomField>