src-03-core-crm/main/default/objects/Contact/fields/BACPMembershipStatus__c.field-meta.xml
<CustomField>
    <fullName>BACPMembershipStatus__c</fullName>
    <description>Displays a value depending on the BACP Membership expiry date</description>
    <formula>IF( PRAC_BACP_Member_expiry_date__c &lt; TODAY(), &apos;Expired&apos;,
IF( PRAC_BACP_Member_expiry_date__c &lt; TODAY()+14, &apos;Upcoming&apos;,
IF( ISBLANK(PRAC_BACP_Member_expiry_date__c), &apos;IS BLANK&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BACP Membership Status</label>
    <type>Text</type>
</CustomField>