src-03-core-crm/main/default/objects/Contact/fields/Can_Manage_Stairs__c.field-meta.xml
<CustomField>
    <fullName>Can_Manage_Stairs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Manage Stairs?</label>
    <type>Checkbox</type>
</CustomField>