src-03-core-crm/main/default/objects/Contact/fields/Consent_to_leave_message_mobile__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_leave_message_mobile__c</fullName>
    <label>Consent to leave message (Mobile)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked</fullName>
                <default>true</default>
                <label>Not Asked</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>