src-03-core-crm/main/default/objects/Contact/fields/Contact_Number_of_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_of_Emergency_Contact__c</fullName>
    <label>Contact Number of Emergency Contact</label>
    <type>Phone</type>
</CustomField>