src-03-core-crm/main/default/objects/Contact/fields/Contact_number_of_Next_of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Contact_number_of_Next_of_Kin__c</fullName>
    <label>Contact number of Next of Kin</label>
    <type>Phone</type>
</CustomField>