src-03-core-crm/main/default/objects/Contact/fields/Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Disabilities__c</fullName>
    <label>Disabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behaviour and Emotional</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Manual Dexterity</fullName>
            </value>
            <value>
                <fullName>Memory or ability to concentrate, learn or understand (Learning Disability)</fullName>
            </value>
            <value>
                <fullName>Mobility and Gross Motor</fullName>
            </value>
            <value>
                <fullName>Perception of Physical Danger</fullName>
            </value>
            <value>
                <fullName>Personal, Self Care and Continence</fullName>
            </value>
            <value>
                <fullName>Progressive Conditions and Physical Health (such as HIV, cancer, multiple sclerosis, fits etc)</fullName>
            </value>
            <value>
                <fullName>Sight</fullName>
            </value>
            <value>
                <fullName>Speech</fullName>
            </value>
            <value>
                <fullName>Other (not listed)</fullName>
            </value>
            <value>
                <fullName>No Disability</fullName>
            </value>
            <value>
                <fullName>Not Stated (Person asked but declined to provide a response)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>