src-03-core-crm/main/default/objects/Contact/fields/Emergency_Info_Declined__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Info_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Info Declined</label>
    <type>Checkbox</type>
</CustomField>