src-03-core-crm/main/default/objects/Contact/fields/Ethnic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Ethnic_Origin__c</fullName>
    <label>Ethnic Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White - British</fullName>
            </value>
            <value>
                <fullName>White - Irish</fullName>
            </value>
            <value>
                <fullName>Any Other White Background</fullName>
            </value>
            <value>
                <fullName>White and Black Caribbean</fullName>
            </value>
            <value>
                <fullName>White and Black African</fullName>
            </value>
            <value>
                <fullName>White and Asian</fullName>
            </value>
            <value>
                <fullName>Other Mixed Background</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British - Indian</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British - Pakistani</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British - Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British - Other Asian Background</fullName>
            </value>
            <value>
                <fullName>Black or Black British - Caribbean</fullName>
            </value>
            <value>
                <fullName>Black or Black British - African</fullName>
            </value>
            <value>
                <fullName>Black or Black British - Other Black Background</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Other Ethnic Group</fullName>
            </value>
            <value>
                <fullName>Not Stated</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
            <value>
                <fullName>Gypsy or Irish Traveller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>