src-03-core-crm/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>CF-{000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>