src-03-core-crm/main/default/objects/Contact/fields/Name_of_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Emergency_Contact__c</fullName>
    <label>Name of Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>