src-03-core-crm/main/default/objects/Contact/fields/Name_of_Next_of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Next_of_Kin__c</fullName>
    <label>Name of Next of Kin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>