src-03-core-crm/main/default/objects/Contact/fields/PRAC_Able_To_Supervise__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Able_To_Supervise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Able To Supervise</label>
    <type>Checkbox</type>
</CustomField>