src-03-core-crm/main/default/objects/Contact/fields/PRAC_Accredited_Registered_Status__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Accredited_Registered_Status__c</fullName>
    <label>Accredited Registered Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisional (BABCP)</fullName>
            </value>
            <value>
                <fullName>Accredited (e.g. BABCP/BACP or equivalent)</fullName>
            </value>
            <value>
                <fullName>Registered (HCPC)</fullName>
            </value>
            <value>
                <fullName>Not accredited but at least 450 training to minimum diploma level and 450 hours supervised therapy hours</fullName>
            </value>
            <value>
                <fullName>Not accredited and not equivalent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>