src-03-core-crm/main/default/objects/Contact/fields/PRAC_AREBT_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>PRAC_AREBT_Accreditation__c</fullName>
    <label>AREBT Accreditation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>