src-03-core-crm/main/default/objects/Contact/fields/PRAC_Availability__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Availability__c</fullName>
    <label>Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daytime</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Other - Please enter in Notes field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>