src-03-core-crm/main/default/objects/Contact/fields/PRAC_BABCP_Accredited_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PRAC_BABCP_Accredited_Expiry_Date__c</fullName>
    <label>BABCP Accredited Expiry Date</label>
    <type>Date</type>
</CustomField>