src-03-core-crm/main/default/objects/Contact/fields/PRAC_BACP_Accredited_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>PRAC_BACP_Accredited_Expiry_date__c</fullName>
    <label>BACP Accredited Expiry date</label>
    <type>Date</type>
</CustomField>