src-03-core-crm/main/default/objects/Contact/fields/PRAC_Clinical_Role__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Clinical_Role__c</fullName>
    <label>Clinical Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Senior Practitioner</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Clinical Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>