src-03-core-crm/main/default/objects/Contact/fields/PRAC_Clinical_Training__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Clinical_Training__c</fullName>
    <label>Clinical Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Body Psychotherapy</fullName>
            </value>
            <value>
                <fullName>CBT</fullName>
            </value>
            <value>
                <fullName>Creative Arts</fullName>
            </value>
            <value>
                <fullName>EMDR</fullName>
            </value>
            <value>
                <fullName>Existential</fullName>
            </value>
            <value>
                <fullName>Gestalt</fullName>
            </value>
            <value>
                <fullName>Humanistic</fullName>
            </value>
            <value>
                <fullName>Mindfulness</fullName>
            </value>
            <value>
                <fullName>Integrative</fullName>
            </value>
            <value>
                <fullName>NLP</fullName>
            </value>
            <value>
                <fullName>Person Centered</fullName>
            </value>
            <value>
                <fullName>Pyschcosynthesis</fullName>
            </value>
            <value>
                <fullName>Pyschoanalytic</fullName>
            </value>
            <value>
                <fullName>Pyschodynamic</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
            <value>
                <fullName>Pyschotherapy</fullName>
            </value>
            <value>
                <fullName>Solution Focussed</fullName>
            </value>
            <value>
                <fullName>Systemic</fullName>
            </value>
            <value>
                <fullName>Transactional Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>