src-03-core-crm/main/default/objects/Contact/fields/PRAC_Communication_Delivery_Methods__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Communication_Delivery_Methods__c</fullName>
    <label>Communication Delivery Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>24 hour helpline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Video Conference Call</fullName>
            </value>
            <value>
                <fullName>Type Talk - person unable to speak</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>