src-03-core-crm/main/default/objects/Contact/fields/PRAC_Date_Affiliate_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Date_Affiliate_Agreement_Received__c</fullName>
    <label>Date Affiliate Agreement Received</label>
    <type>Date</type>
</CustomField>