src-03-core-crm/main/default/objects/Contact/fields/PRAC_Date_Application_Received__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Date_Application_Received__c</fullName>
    <label>Date Application Received</label>
    <type>Date</type>
</CustomField>