src-03-core-crm/main/default/objects/Contact/fields/PRAC_DBS_Copy_Received__c.field-meta.xml
<CustomField>
    <fullName>PRAC_DBS_Copy_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBS Copy Received</label>
    <type>Checkbox</type>
</CustomField>