src-03-core-crm/main/default/objects/Contact/fields/PRAC_Forms_Checked__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Forms_Checked__c</fullName>
    <label>Forms Checked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>