src-03-core-crm/main/default/objects/Contact/fields/PRAC_Highest_Qualification__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Highest_Qualification__c</fullName>
    <label>Highest Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Advanced Certificate</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Advanced Diploma</fullName>
            </value>
            <value>
                <fullName>BA/BSc/Bachelor Degree</fullName>
            </value>
            <value>
                <fullName>Postgraduate Certificate</fullName>
            </value>
            <value>
                <fullName>Postgraduate Diploma</fullName>
            </value>
            <value>
                <fullName>MA/MSc/Masters Degree</fullName>
            </value>
            <value>
                <fullName>PHd/D.Clin/Doctorate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>