src-03-core-crm/main/default/objects/Contact/fields/PRAC_Initial_Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Initial_Date_Returned__c</fullName>
    <label>Initial Date Returned</label>
    <type>Date</type>
</CustomField>