src-03-core-crm/main/default/objects/Contact/fields/PRAC_Insurance_Provider_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Insurance_Provider_Expiry_Date__c</fullName>
    <label>Insurance Provider Expiry Date</label>
    <type>Date</type>
</CustomField>