src-03-core-crm/main/default/objects/Contact/fields/PRAC_Interview_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Interview_Outcome__c</fullName>
    <label>Interview Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>