src-03-core-crm/main/default/objects/Contact/fields/PRAC_Lead_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Lead_Interviewer__c</fullName>
    <label>Lead Interviewer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>