src-03-core-crm/main/default/objects/Contact/fields/PRAC_Notes__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>