src-03-core-crm/main/default/objects/Contact/fields/PRAC_Other_membership_registration__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Other_membership_registration__c</fullName>
    <label>Other membership registration</label>
    <type>TextArea</type>
</CustomField>