src-03-core-crm/main/default/objects/Contact/fields/PRAC_Other_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Other_Qualifications__c</fullName>
    <label>Other Qualifications</label>
    <type>TextArea</type>
</CustomField>