src-03-core-crm/main/default/objects/Contact/fields/PRAC_Own_Venue__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Own_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Venue</label>
    <type>Checkbox</type>
</CustomField>