src-03-core-crm/main/default/objects/Contact/fields/PRAC_Permission__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Permission__c</fullName>
    <label>Permission to View Online DBS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not asked</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>