src-03-core-crm/main/default/objects/Contact/fields/PRAC_Policies_and_procedures_Initial__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Policies_and_procedures_Initial__c</fullName>
    <label>Policies and procedures Initial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checklist Issued</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>