src-03-core-crm/main/default/objects/Contact/fields/PRAC_Practitioner_Languages__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Practitioner_Languages__c</fullName>
    <label>Practitioner Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>British Sign Language</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Dari - Afghan Persian</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Gujerati</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Hungarian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Kurdish - Kurmanji</fullName>
            </value>
            <value>
                <fullName>Kurdish - Sorani</fullName>
            </value>
            <value>
                <fullName>Latvian</fullName>
            </value>
            <value>
                <fullName>Lithuanian</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Mirpuri</fullName>
            </value>
            <value>
                <fullName>Nepalese</fullName>
            </value>
            <value>
                <fullName>Oromo</fullName>
            </value>
            <value>
                <fullName>Pashto</fullName>
            </value>
            <value>
                <fullName>Persian/Farsi</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>Romanian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>