src-03-core-crm/main/default/objects/Contact/fields/PRAC_Practitioner_Type__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Practitioner_Type__c</fullName>
    <label>Practitioner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Affiliate - Supervisor Only</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Unpaid Worker</fullName>
            </value>
            <value>
                <fullName>Flexible Staffing Member</fullName>
            </value>
            <value>
                <fullName>Mind Practitioner</fullName>
            </value>
            <value>
                <fullName>IESO Practitioner</fullName>
            </value>
            <value>
                <fullName>SVS Practitioner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>