src-03-core-crm/main/default/objects/Contact/fields/PRAC_Purchase_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Purchase_Ledger_Code__c</fullName>
    <label>Purchase Ledger Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>