src-03-core-crm/main/default/objects/Contact/fields/PRAC_Recruitment_Notes__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Recruitment_Notes__c</fullName>
    <label>Recruitment Notes</label>
    <type>TextArea</type>
</CustomField>